--- a/YouTubePlayerKara/packages.config
+++ b/YouTubePlayerKara/packages.config
@@ -1,8 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Google.Apis" version="1.33.0" targetFramework="net461" />
-  <package id="Google.Apis.Core" version="1.33.0" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
+  <package id="Core.Google.GData.Extensions" version="1.0.2" targetFramework="net461" />
+  <package id="Core.Google.Gdata.YouTube" version="1.0.0" targetFramework="net461" />
+  <package id="Google.Apis" version="1.33.1" targetFramework="net461" />
+  <package id="Google.Apis.Auth" version="1.33.1" targetFramework="net461" />
+  <package id="Google.Apis.Core" version="1.33.1" targetFramework="net461" />
+  <package id="Google.Apis.YouTube.v3" version="1.33.1.1217" targetFramework="net461" />
+  <package id="Google.GData.Client" version="2.2.0.0" targetFramework="net461" />
+  <package id="Google.Gdata.Client.Core" version="1.0.2" targetFramework="net461" />
+  <package id="Google.GData.Extensions" version="2.2.0.0" targetFramework="net461" />
+  <package id="Google.GData.YouTube" version="2.2.0.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="System.Net.Http" version="4.3.1" targetFramework="net461" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
