--- a/YouTubePlayerKara/packages.config
+++ b/YouTubePlayerKara/packages.config
@@ -5,6 +5,7 @@
   <package id="Google.Apis" version="1.33.1" targetFramework="net461" />
   <package id="Google.Apis.Auth" version="1.33.1" targetFramework="net461" />
   <package id="Google.Apis.Core" version="1.33.1" targetFramework="net461" />
+  <package id="Google.Apis.Drive.v3" version="1.33.1.1219" targetFramework="net461" />
   <package id="Google.Apis.YouTube.v3" version="1.33.1.1217" targetFramework="net461" />
   <package id="Google.GData.Client" version="2.2.0.0" targetFramework="net461" />
   <package id="Google.Gdata.Client.Core" version="1.0.2" targetFramework="net461" />
